--- a/overrides/main.html
+++ b/overrides/main.html
@@ -2,6 +2,12 @@
 
 {% block extrahead %}
 
+<style>
+@import url('https://fonts.cdnfonts.com/css/amazon-ember');
+</style>
+
+<link href="https://fonts.cdnfonts.com/css/amazon-ember" rel="stylesheet">               
+
 <script>
   (function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.head.getElementsByTagName('script')[0]);})(
     'cwr',
